--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
-      MONGO_INITDB_DATABASE: aibots
-    volumes:
-      - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+      # MONGO_INITDB_DATABASE: aibots
+    # volumes:
+    #   - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
   mongo-express:
     image: mongo-express
     restart: always
