--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,13 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@host.docker.internal:27017/
+
+  backend:
+    build: ./backend
+    restart: always
+    ports:
+      - 8000:80
+    env_file:
+      - .env
+    depends_on:
+      - mongodb
