--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,13 +13,17 @@ h11==0.14.0
 httpcore==1.0.3
 httpx==0.26.0
 idna==3.6
+iniconfig==2.0.0
 lazy-model==0.2.0
 motor==3.3.2
 openai==1.12.0
+packaging==23.2
+pluggy==1.4.0
 pycparser==2.21
 pydantic==2.6.1
 pydantic_core==2.16.2
 pymongo==4.6.1
+pytest==8.0.1
 regex==2023.12.25
 requests==2.31.0
 sniffio==1.3.0
